@@ -1,3 +1,27 @@
+AUX 1.4.1/init.d/zabbix-agentd 582 RMD160 b2400ae97cabeaa979b859dbb32cf8a62031f88d SHA1 5fea421bcbbd6450b7410286f4e761d4079755da SHA256 ef9a5eccc6ce80b412435e7f2895248f1eb6efede6c2a658bf83afa82abd4e36
+MD5 aeaedd56a3b6dd1f231919136cf4985b files/1.4.1/init.d/zabbix-agentd 582
+RMD160 b2400ae97cabeaa979b859dbb32cf8a62031f88d files/1.4.1/init.d/zabbix-agentd 582
+SHA256 ef9a5eccc6ce80b412435e7f2895248f1eb6efede6c2a658bf83afa82abd4e36 files/1.4.1/init.d/zabbix-agentd 582
+AUX 1.4.1/init.d/zabbix-server 564 RMD160 626f2702ae485cb71e7da519eef7e45cdf6649b0 SHA1 0ae9d17a4724884693e2825ee695c1aeb654d85a SHA256 d29b636ae36f01565dd59adda492ec264d01d4894f8e8573b85d3fbae0b32836
+MD5 89965fe7e90421d096ddd5cf1c360d07 files/1.4.1/init.d/zabbix-server 564
+RMD160 626f2702ae485cb71e7da519eef7e45cdf6649b0 files/1.4.1/init.d/zabbix-server 564
+SHA256 d29b636ae36f01565dd59adda492ec264d01d4894f8e8573b85d3fbae0b32836 files/1.4.1/init.d/zabbix-server 564
+AUX 1.4.1/postinstall-en.txt 147 RMD160 c0aa1d85021eb046f9c92415fa8e95f9296b046d SHA1 cb5e16baa4cc0a1bf728d94a14fe5e0a85aebcf4 SHA256 3855cb33f7ca570a44e42d578894aba9ebe22fd2992f9f009ca954286f4ba38f
+MD5 392866a9646be48478cc76f1c258b59b files/1.4.1/postinstall-en.txt 147
+RMD160 c0aa1d85021eb046f9c92415fa8e95f9296b046d files/1.4.1/postinstall-en.txt 147
+SHA256 3855cb33f7ca570a44e42d578894aba9ebe22fd2992f9f009ca954286f4ba38f files/1.4.1/postinstall-en.txt 147
+AUX 1.4.1/zabbix_agent.conf 1119 RMD160 6da1953fc0439cf0c991272db08b291c7b319cc8 SHA1 386501f78cd138f15d90ed66eacdef20c49659e4 SHA256 ba99099f1943d5cc86e29250d1040388d6b8af2e2e89423f1a681b6401399556
+MD5 3e99b93cc18551891ec59d7d44472497 files/1.4.1/zabbix_agent.conf 1119
+RMD160 6da1953fc0439cf0c991272db08b291c7b319cc8 files/1.4.1/zabbix_agent.conf 1119
+SHA256 ba99099f1943d5cc86e29250d1040388d6b8af2e2e89423f1a681b6401399556 files/1.4.1/zabbix_agent.conf 1119
+AUX 1.4.1/zabbix_agentd.conf 2353 RMD160 baba6bdd27a6f8d6cc4cd14e26d98eba38f276c5 SHA1 ee72e6945ae7269628903eb3c3ab7cc07908ea70 SHA256 73bb022dce06c40ae98833068599fb0d1854eafdbaef2098db2ecd223a0e5856
+MD5 9c846417470caa52ca6ed1464304b0fd files/1.4.1/zabbix_agentd.conf 2353
+RMD160 baba6bdd27a6f8d6cc4cd14e26d98eba38f276c5 files/1.4.1/zabbix_agentd.conf 2353
+SHA256 73bb022dce06c40ae98833068599fb0d1854eafdbaef2098db2ecd223a0e5856 files/1.4.1/zabbix_agentd.conf 2353
+AUX 1.4.1/zabbix_server.conf 2443 RMD160 01b2f8d48375abf01d22fa7bca82f55fe6151059 SHA1 888914b480f3f3fedbdf66356baf7cf9b0ee063b SHA256 1075a5dc88e833f217b87a42ff83a27aa5f0d31ec8f48c466aa4d6588a33fba4
+MD5 ce48345e4edfa73592e122c2a960e51a files/1.4.1/zabbix_server.conf 2443
+RMD160 01b2f8d48375abf01d22fa7bca82f55fe6151059 files/1.4.1/zabbix_server.conf 2443
+SHA256 1075a5dc88e833f217b87a42ff83a27aa5f0d31ec8f48c466aa4d6588a33fba4 files/1.4.1/zabbix_server.conf 2443
 AUX 1.4/init.d/zabbix-agentd 580 RMD160 4cff7c27ca374b55ba7f2952cd77bbbb1202c462 SHA1 0292f902b1b1b3a2a53c9f06c271a4e99005119e SHA256 95e57f88d59273421e223036a2982fdb16e8a270f6bb6047b7d5fcfb9542230b
 MD5 1ef9a49ffc79ef6ca44baa443279ac68 files/1.4/init.d/zabbix-agentd 580
 RMD160 4cff7c27ca374b55ba7f2952cd77bbbb1202c462 files/1.4/init.d/zabbix-agentd 580
@@ -22,15 +46,20 @@ AUX 1.4/zabbix_server.conf 2443 RMD160 01b2f8d48375abf01d22fa7bca82f55fe6151059 
 MD5 ce48345e4edfa73592e122c2a960e51a files/1.4/zabbix_server.conf 2443
 RMD160 01b2f8d48375abf01d22fa7bca82f55fe6151059 files/1.4/zabbix_server.conf 2443
 SHA256 1075a5dc88e833f217b87a42ff83a27aa5f0d31ec8f48c466aa4d6588a33fba4 files/1.4/zabbix_server.conf 2443
+DIST zabbix-1.4.1.tar.gz 3246817 RMD160 6afcf78adf0e5f192c0cd36a01ca7802a3c8e94b SHA1 d23b3de01b5b7563f63b25833c0535f41bba273b SHA256 631445f5a1a9b0852bb20644cfdf735d8e1ecdc04c4c0a9b394bfb3429a5a6dc
 DIST zabbix-1.4.tar.gz 3141667 RMD160 621286e0c5393beb5e9ac7303b046db60717ac14 SHA1 f125f9ecbc461835fd4fdf054099616b5131c549 SHA256 ed1cb9437a5bd3d3f81b3969303c7bfb3d395f3e636fd19ddcbc52a1a800ba66
+EBUILD zabbix-1.4.1.ebuild 6848 RMD160 41f8da2741c95418fb38e91ea30d92f1a90a263b SHA1 1d24850f3db82606e4d14c025c02f0dc160c0605 SHA256 5169603bfc09c38c5dd8ee82012706dfb58111e6d33b50cf9d8549b5da48b0c8
+MD5 f8eb9a2067dda991a33922d546f01d4f zabbix-1.4.1.ebuild 6848
+RMD160 41f8da2741c95418fb38e91ea30d92f1a90a263b zabbix-1.4.1.ebuild 6848
+SHA256 5169603bfc09c38c5dd8ee82012706dfb58111e6d33b50cf9d8549b5da48b0c8 zabbix-1.4.1.ebuild 6848
 EBUILD zabbix-1.4.ebuild 6833 RMD160 06a45c5a456a5a84873d498d6613c4364ce0f41c SHA1 53052f52c99566817bcad38503c041e448fa746e SHA256 a66743c93e63bbc09bc06dcabc0ab33041fce7d24297986db53e432151e94970
 MD5 07a1d2da899ced190db67d7168f184f7 zabbix-1.4.ebuild 6833
 RMD160 06a45c5a456a5a84873d498d6613c4364ce0f41c zabbix-1.4.ebuild 6833
 SHA256 a66743c93e63bbc09bc06dcabc0ab33041fce7d24297986db53e432151e94970 zabbix-1.4.ebuild 6833
-MISC ChangeLog 543 RMD160 574101aa8b1c6c6b2853295c3f06d784217b8fba SHA1 489c11897236921f04c63ca8084c611bf08f9ee0 SHA256 1323de9b04e440ec1b28bf6082b6a90cd68c40f2c1084e9cea97422f57be8a20
-MD5 a16c2fbf86535ba7c5c9205a5a42f457 ChangeLog 543
-RMD160 574101aa8b1c6c6b2853295c3f06d784217b8fba ChangeLog 543
-SHA256 1323de9b04e440ec1b28bf6082b6a90cd68c40f2c1084e9cea97422f57be8a20 ChangeLog 543
+MISC ChangeLog 872 RMD160 54a93fd5c825d9ddf92dcff3768775815ee60915 SHA1 67bb9531c3e3856883b5bd524a18f927e0a963b4 SHA256 3a2e5526d49a0dd978b8ca94c718e4cfff8ae092628ac615c347994f0024cc23
+MD5 13894dec2e49c534850c5bc36ebbf0bf ChangeLog 872
+RMD160 54a93fd5c825d9ddf92dcff3768775815ee60915 ChangeLog 872
+SHA256 3a2e5526d49a0dd978b8ca94c718e4cfff8ae092628ac615c347994f0024cc23 ChangeLog 872
 MISC metadata.xml 630 RMD160 0ceb5472b6bc0efd1fa4a09f52d3ef953b0cb13c SHA1 88bffe8fc9f05440edecef1fdc65f4c6dbb6f735 SHA256 770d0897320974215ae8d520cc2f56761e9b53dfa85e9e3081bff1427d8aa03c
 MD5 d86acab58212886771ef2bf837a2e8b9 metadata.xml 630
 RMD160 0ceb5472b6bc0efd1fa4a09f52d3ef953b0cb13c metadata.xml 630
@@ -38,3 +67,6 @@ SHA256 770d0897320974215ae8d520cc2f56761e9b53dfa85e9e3081bff1427d8aa03c metadata
 MD5 7efbc7a6a1c760196523f9c49023bfad files/digest-zabbix-1.4 235
 RMD160 87f652047cca3f53fe1b396503e564d12b137cc2 files/digest-zabbix-1.4 235
 SHA256 2a6d1eb897cfa551f8ad0dcc18406ec64e065c4eca5a92fe0e8e7964656dbda3 files/digest-zabbix-1.4 235
+MD5 c7d5ff2102abf066706cf0d5a8f065d7 files/digest-zabbix-1.4.1 241
+RMD160 cac248cd9d2979539bdb176631d711a19a80e8d5 files/digest-zabbix-1.4.1 241
+SHA256 5f979e5528f8f445f7467486f98bfd208820aabb7466668e2e2fb0c532de250c files/digest-zabbix-1.4.1 241
