@@ -1,0 +1,22 @@
+#!/sbin/runscript
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/zabbix/files/1.4.1/init.d/zabbix-agentd,v 1.1 2007/07/24 11:49:19 wschlich Exp $
+
+depend() {
+	need net
+	provide zabbix-agent
+	use zabbix-server
+}
+
+start() {
+	ebegin "Starting Zabbix agent"
+	start-stop-daemon --start -c zabbix:zabbix --exec /usr/sbin/zabbix_agentd
+	eend $?
+}
+
+stop() {
+	ebegin "Stopping Zabbix agent"
+	start-stop-daemon  --stop -u zabbix --pidfile /var/run/zabbix/zabbix_agentd.pid
+	eend $?
+}
