@@ -1,0 +1,21 @@
+#!/sbin/runscript
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/zabbix/files/1.4.1/init.d/zabbix-server,v 1.1 2007/07/24 11:49:19 wschlich Exp $
+
+depend() {
+	need net
+	use mysql postgresql
+}
+
+start() {
+	ebegin "Starting Zabbix server"
+	start-stop-daemon --start -c zabbix:zabbix --exec /usr/sbin/zabbix_server
+	eend $?
+}
+
+stop() {
+	ebegin "Stopping Zabbix server"
+	start-stop-daemon --stop -u zabbix --pidfile /var/run/zabbix/zabbix_server.pid
+	eend $?
+}
