@@ -1,0 +1,98 @@
+# This is config file for ZABBIX server process
+# To get more information about ZABBIX, 
+# go http://www.zabbix.com
+
+############ GENERAL PARAMETERS #################
+
+# This defines which server this is.
+# Default value 1
+# This parameter must be between 1 and 255
+Server=1
+
+# Number of pre-forked instances of pollers
+# Default value is 6
+# This parameter must be between 6 and 255
+StartPollers=6
+
+# Number of pre-forked instances of trappers
+# Default value is 5
+# This parameter must be between 2 and 255
+StartTrappers=5
+
+# Listen interface for trapper. Trapper will listen all network interfaces
+# if this parameter is missing.
+ListenIP=127.0.0.1
+
+# Listen port for trapping. Default port number is 10051. This parameter 
+# must be between 1024 and 32767
+ListenPort=10051
+
+# How often ZABBIX will perform housekeeping procedure
+# (in hours)
+# Default value is 1 hour
+# Housekeeping is removing unnecessary information from
+# tables history, alert, and alarms
+# This parameter must be between 1 and 24
+HousekeepingFrequency=1
+
+# How often ZABBIX will try to send unsent alerts
+# (in seconds)
+# Default value is 30 seconds
+SenderFrequency=30
+
+# Uncomment this line to disable housekeeping procedure
+#DisableHousekeeping=1
+
+# Specifies debug level
+# 0 - debug is not created
+# 1 - critical information
+# 2 - error information
+# 3 - warnings (default)
+# 4 - for debugging (produces lots of information)
+DebugLevel=3
+
+# Specifies how long we wait for agent (in sec)
+# Must be between 1 and 30 
+Timeout=5
+
+# After how many seconds of unreachability treat a host as unavailable
+UnreachablePeriod=45
+
+# How ofter check host for availability during the unreachability period
+UnavailableDelay=15
+
+# How ofter check host for availability during the unavailability period
+UnavailableDelay=60
+
+# Name of PID file
+PidFile=/var/run/zabbix/zabbix_server.pid
+
+# Name of log file
+# If not set, syslog is used
+LogFile=/var/log/zabbix/zabbix_server.log
+
+#Location for custom alert scripts
+AlertScriptsPath=/var/lib/zabbix/scripts
+
+#Location of 'fping. Default is /usr/sbin/fping
+FpingLocation=/usr/sbin/fping
+
+# Frequency of ICMP pings. Defauls is 30 second.
+PingerFrequency=30
+
+# Database host name
+# Default is localhost
+DBHost=localhost
+
+# Database name
+DBName=zabbix
+
+# Database user
+DBUser=zabbix
+
+# Database password
+# Comment this line if no password used
+DBPassword=zabbix
+
+# Connect to MySQL using Unix socket?
+#DBSocket=/var/run/mysqld/mysqld.sock
