@@ -1,0 +1,3 @@
+MD5 c9e9a12eeb3ae784075cb7899f200889 zabbix-1.4.1.tar.gz 3246817
+RMD160 6afcf78adf0e5f192c0cd36a01ca7802a3c8e94b zabbix-1.4.1.tar.gz 3246817
+SHA256 631445f5a1a9b0852bb20644cfdf735d8e1ecdc04c4c0a9b394bfb3429a5a6dc zabbix-1.4.1.tar.gz 3246817
